--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
-aiohttp==3.6.2
-altgraph==0.17
-async-timeout==3.0.1
-attrs==20.2.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+altgraph==0.17.2
+async-timeout==4.0.2
+attrs==21.4.0
 Babel==2.9.1
-certifi==2020.6.20
-chardet==3.0.4
+certifi==2021.10.8
+charset-normalizer==2.0.12
+frozenlist==1.3.0
 future==0.18.2
-idna==2.10
-multidict==4.7.6
-pefile==2019.4.18
-pyinstaller==4.0
-pyinstaller-hooks-contrib==2020.8
-pytz==2020.1
+idna==3.3
+multidict==6.0.2
+pefile==2021.9.3
+pyinstaller==4.10
+pyinstaller-hooks-contrib==2022.3
+pytz==2022.1
 pywin32-ctypes==0.2.0
-requests==2.24.0
+requests==2.27.1
 tkcalendar==1.6.1
-urllib3==1.26.5
-XlsxWriter==1.3.6
-yarl==1.6.0
+urllib3==1.26.9
+XlsxWriter==3.0.3
+yarl==1.7.2
