--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,17 @@ altgraph==0.17.2
 async-timeout==4.0.2
 attrs==21.4.0
 Babel==2.9.1
+black==22.3.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 frozenlist==1.3.0
 future==0.18.2
 idna==3.3
 multidict==6.0.2
+numpy==1.22.3
+pandas==1.4.2
 pefile==2021.9.3
+Pillow==9.1.0
 pyinstaller==4.10
 pyinstaller-hooks-contrib==2022.3
 pytz==2022.1
