--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,30 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-altgraph==0.17.2
+aiohttp==3.8.3
+aiosignal==1.3.1
+altgraph==0.17.3
 async-timeout==4.0.2
-attrs==21.4.0
-Babel==2.9.1
-black==22.3.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
-frozenlist==1.3.0
+attrs==22.2.0
+Babel==2.11.0
+black==23.1.0
+certifi==2022.12.7
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+frozenlist==1.3.3
 future==0.18.3
-idna==3.3
-multidict==6.0.2
-pefile==2021.9.3
-Pillow==9.3.0
-pyinstaller==4.10
-pyinstaller-hooks-contrib==2022.3
-pytz==2022.1
+idna==3.4
+multidict==6.0.4
+mypy-extensions==1.0.0
+packaging==23.0
+pathspec==0.11.0
+pefile==2022.5.30
+Pillow==9.4.0
+platformdirs==2.6.2
+pyinstaller==5.7.0
+pyinstaller-hooks-contrib==2022.15
+pytz==2022.7.1
 pywin32-ctypes==0.2.0
-requests==2.27.1
-urllib3==1.26.9
-XlsxWriter==3.0.3
-yarl==1.7.2
+requests==2.28.2
+tomli==2.0.1
+urllib3==1.26.14
+XlsxWriter==3.0.8
+yarl==1.8.2
